Code Cleanup ByteEncoder